Menu System Testing. Implement click events, menu manager.